gobmkida/c2/make_domains
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:640:12: error: expected expression
*( _OWORD *)&b_eye[v7].value.a = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:640:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b_eye[v7].value.a = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:641:12: error: expected expression
*( _OWORD *)&b_eye[v7].color = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:641:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b_eye[v7].color = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:646:12: error: expected expression
*( _OWORD *)&w_eye[v7].value.a = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:646:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&w_eye[v7].value.a = v9; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:647:12: error: expected expression
*( _OWORD *)&w_eye[v7].color = v9; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/engine/optics.c:647:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&w_eye[v7].color = v9; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/make_domains/src/obj/1/optics.o] Error 1
